Inherit from cucumber-parent pom